--- a/flowerStyle.css
+++ b/flowerStyle.css
@@ -65,39 +65,65 @@
 
 
 main {
-  max-width: 1140px;
+  max-width: 1370px;
   margin: 0px auto;
-}
-section {
-  margin: 130px 0px;
-}
-#feature-flowers {
-  padding: 25px 50px;
+  justify-self: auto;
 }
 
-/* .flower-container {
+main section {
+  margin-top: 130px;
+  
+}
+
+.flower-container {
   display: flex;
-  gap: 32px;
-}
-
-.flower {
   align-items: center;
-  border-radius: 300px 300px 0px 0px;
-  padding: 110px 76px;
+  justify-content: center;
+  gap: 50px;
+ 
 }
-.flowerimg {
-  width: 310px;
-}
-#pngwing6 {
-  background: rgba(167, 33, 98, 0.15);
-}
+.flower{
+  margin-top: 30px;
+  
+  }
+
+  .flower-container > .flower > p{
+    text-align: center;
+    
+  }
+
 
 .flower-link {
+  
   color: #272727;
-  align-items: center;
   font-size: 24px;
   font-weight: 700;
-  line-height: 35px;
   text-decoration-line: underline;
-  margin-inline: auto;
-} */
+  margin-top: 20px;
+   
+}
+
+#pngwing6{
+  border-radius: 300px 300px 0px 0px;
+  padding: 25px 30px 0px 30px;
+  background: rgba(167, 33, 98, 0.15);
+  height: 480px;
+  width: 350px;
+}
+
+
+#pngwing5{
+  border-radius: 300px 300px 0px 0px;
+  padding: 25px 30px 0px 30px;
+  background: #0597A026;
+  height: 480px;
+  width: 350px;
+}
+
+#pngwing7{
+  border-radius: 300px 300px 0px 0px;
+  padding: 25px 30px 0px 30px;
+  background: rgba(167, 33, 98, 0.15);
+  height: 480px;
+  width: 350px;
+}
