--- a/flowerStyle.css
+++ b/flowerStyle.css
@@ -79,7 +79,7 @@ section {
   /* align-items: center; */
   justify-content: space-around;
   gap: px;
-  
+
 
 }
 
@@ -129,37 +129,39 @@ section {
   width: 310px;
 }
 
-.support{
+.support {
   background: #e554731a;
-   padding: 30px 30px 0px 150px;
+  padding: 30px 30px 0px 150px;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.hotdeal{
+.hotdeal {
   background: #e554731a;
-   padding: 30px 30px 0px 150px;
+  padding: 30px 30px 0px 150px;
   display: flex;
   align-items: center;
   justify-content: center;
 }
- .hotdeal-content{
+
+.hotdeal-content {
   width: 40%;
   text-align: center;
- }
+}
+
 .hotdeal .hotdeal-flower-pic {
   width: 520px;
-   
+
 }
 
 
 
 .hotdeal-greeting {
   color: #272727;
-font-size: 40px;
-font-style: normal;
-font-weight: 800;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 800;
 
 }
 
@@ -169,11 +171,11 @@ font-weight: 800;
   font-weight: 400;
   margin-top: 32px;
   margin-bottom: 32px;
-  
+
 }
 
-.flowerfontstyle{
-color: #e55473;
+.flowerfontstyle {
+  color: #e55473;
 }
 
 
@@ -181,8 +183,23 @@ color: #e55473;
 .instra-container {
   display: flex;
   align-items: center;
-  justify-content:space-between;
+  justify-content: space-between;
   gap: 10px;
 
 }
 
+.feature {
+  padding: 130px;
+  border-radius: 10px;
+  background: rgba(39, 39, 39, 0.05);
+  margin: 130px 0px;
+}
+
+.feature-info-container {
+  display: flex;
+  justify-content: space-around;
+}
+
+.feature-info {
+  text-align: center;
+}
